--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
-    "@horizon/client": "^2.0.0",
+    "horizon/client": "^2.0.0",
     "horizon-redux": "^2.3.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.7.0",
