--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       }
     },
     "deploy": {
-      "command": "npm run lint && npm run test && npm run clean && npm run compile",
+      "command": "npm run clean && npm run compile",
       "env": {
         "DEBUG": "app:*"
       }
@@ -92,7 +92,7 @@
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
-    "horizon/client": "^2.0.0",
+    "horizon": "^2.0.0",
     "horizon-redux": "^2.3.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.7.0",
